--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 96,
    "id": "46237dbc-ac22-482f-9373-1c1eaee56f40",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 128,
    "id": "86be0452-6e98-46b4-9e4f-4447fc9996ef",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 129,
    "id": "72461323-634d-47c7-9070-c9b560e9f8cd",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 130,
    "id": "c84f0247-badc-400d-8d9e-a70c30a44d0b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 131,
    "id": "e87f1527-df2f-4650-8f2a-d41a1e2b554f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 132,
    "id": "d77fe2da-0b90-4c65-ae0a-7709b891e408",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 133,
    "id": "7b875bff-5467-4770-8ab8-859339367865",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 134,
    "id": "b1510c06-e424-4563-972e-ff88dfd9fbc0",
    "metadata": {},
    "outputs": [],
@@ -162,14 +162,14 @@
     "@Language.component(\"initCoref\")\n",
     "def initCoref(doc):\n",
     "  for e in doc.ents:\n",
-    "    if e.label_ in customLabel:\n",
+    "    # if e.label_ in customLabel:\n",
     "      e[0]._.ref_n, e[0]._.ref_t = e.text, e.label_\n",
     "  return doc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 135,
    "id": "eefa2983-fc49-4027-abde-f2281f27508a",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 136,
    "id": "c7427840-70b6-4688-9d59-9857f29d5d45",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 137,
    "id": "307b1d23-da5c-47e1-96e7-ca807af1c2a0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 138,
    "id": "38da0b2b-c0b8-41df-a62f-4b35a7128331",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 139,
    "id": "23a97765-5029-4dc9-a418-3b959ebccadf",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 140,
    "id": "42718587-1eba-4162-a4b0-333f01ce79b5",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 141,
    "id": "4683848d-8b5c-453c-b5f4-15cd5147c082",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 142,
    "id": "dd59f6b0-bfa8-44f9-b73b-0bc7369616b3",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 143,
    "id": "cc0561d7-775d-4c19-ae5c-68fc2d39fd09",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        " 'expandEntities']"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 143,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 144,
    "id": "645de700-3e0b-40e0-aa15-dcea71a016f2",
    "metadata": {},
    "outputs": [],
@@ -363,30 +363,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 145,
    "id": "a0f0d71b-0b76-416d-b73a-926933ded429",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x143ca50e0>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x143cc0040>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x10daeaa60>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x13b5a2630>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x147debf90>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x147dcc880>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x143c94280>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x13d41fcc0>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x1402e17c0>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x13e12a300>),\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x147deab00>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x147de8d40>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x147c37fa0>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x147c3cc80>),\n",
        " ('normEntities', <function __main__.normEntities(doc)>),\n",
        " ('initCoref', <function __main__.initCoref(doc)>),\n",
        " ('aliasResolver', <function __main__.aliasResolver(doc)>),\n",
-       " ('coreferee', <coreferee.manager.CorefereeBroker at 0x13e1f4250>),\n",
+       " ('coreferee', <coreferee.manager.CorefereeBroker at 0x13e839850>),\n",
        " ('anaphorCoref', <function __main__.anaphorCoref(doc)>),\n",
        " ('expandEntities', <function __main__.expandEntities(doc)>)]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 145,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 146,
    "id": "dbc474ab-204f-4c6b-8f10-e76dbdd5457c",
    "metadata": {},
    "outputs": [],
@@ -416,26 +416,87 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 189,
+   "id": "8c459300-fc7a-42cf-82d6-b2b04e292d61",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patterns = [{\"label\":\"comp\", \"pattern\":[{\"LOWER\":\"gauge\"}], \"id\":\"ssc\"}]\n",
+    "ruler = nlp.get_pipe('entity_ruler')\n",
+    "ruler.add_patterns(patterns)\n",
+    "rules = [{\"LOWER\":\"pump\"}]\n",
+    "from spacy.matcher import Matcher\n",
+    "matcher = Matcher(nlp.vocab)\n",
+    "matcher.add('comp', [rules])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
    "id": "c65480e5-e18a-41a3-92a6-b4ff7f645fb5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/wangc/miniconda3/envs/sr2ml_libs/lib/python3.9/site-packages/spacy/pipeline/entityruler.py:339: UserWarning: [W036] The component 'entity_ruler' does not have any patterns defined.\n",
-      "  warnings.warn(Warnings.W036.format(name=self.name))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "doc = nlp(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 200,
+   "id": "1ce1bea8-e78a-4f92-91f9-ea401d4f97a4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative. comp\n",
+      "A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative. comp\n",
+      "The RCP pump 1A pressure gauge was found inoperative. comp\n",
+      "\n",
+      "          Rupture of pump bearings caused shaft degradation. comp\n",
+      "\n",
+      "          Rupture of pump bearings caused shaft degradation and consequent flow reduction. comp\n",
+      "\n",
+      "          Pump power supply has been found burnout. comp\n",
+      "\n",
+      "          Pump test failed due to power supply failure. comp\n",
+      "\n",
+      "          Pump inspection revealed excessive impeller degradation. comp\n",
+      "\n",
+      "          Pump inspection revealed excessive impeller degradation likely due to cavitation. comp\n"
+     ]
+    }
+   ],
+   "source": [
+    "matches = matcher(doc, as_spans=True)\n",
+    "for span in matches:\n",
+    "    print(span.sent, span.label_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "id": "7fb5cf82-4c40-435b-8809-9705ae2e12aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'tuple'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(type(doc.ents))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 196,
    "id": "0e712288-8fb5-4c83-960d-b895fb7c4dba",
    "metadata": {},
    "outputs": [],
@@ -445,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 197,
    "id": "22feb96d-37a4-4d54-af4b-db7899d75dfc",
    "metadata": {},
    "outputs": [
@@ -467,7 +528,12 @@
        "    1A\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">CARDINAL</span>\n",
        "</mark>\n",
-       " pressure gauge was found not operating, and it was found inoperative.</br>          The \n",
+       " pressure \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    gauge\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">comp</span>\n",
+       "</mark>\n",
+       " was found not operating, and it was found inoperative.</br>          The \n",
        "<mark class=\"entity\" style=\"background: #7aecec; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
        "    RCP\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">ORG</span>\n",
@@ -477,7 +543,12 @@
        "    1A\n",
        "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">CARDINAL</span>\n",
        "</mark>\n",
-       " pressure gauge was found inoperative.</br>          Rupture of pump bearings caused shaft degradation.</br>          Rupture of pump bearings caused shaft degradation and consequent flow reduction.</br>          Pump power supply has been found burnout.</br>          Pump test failed due to power supply failure.</br>          Pump inspection revealed excessive impeller degradation.</br>          Pump inspection revealed excessive impeller degradation likely due to cavitation.</br>        </div></span>"
+       " pressure \n",
+       "<mark class=\"entity\" style=\"background: #ddd; padding: 0.45em 0.6em; margin: 0 0.25em; line-height: 1; border-radius: 0.35em;\">\n",
+       "    gauge\n",
+       "    <span style=\"font-size: 0.8em; font-weight: bold; line-height: 1; border-radius: 0.35em; vertical-align: middle; margin-left: 0.5rem\">comp</span>\n",
+       "</mark>\n",
+       " was found inoperative.</br>          Rupture of pump bearings caused shaft degradation.</br>          Rupture of pump bearings caused shaft degradation and consequent flow reduction.</br>          Pump power supply has been found burnout.</br>          Pump test failed due to power supply failure.</br>          Pump inspection revealed excessive impeller degradation.</br>          Pump inspection revealed excessive impeller degradation likely due to cavitation.</br>        </div></span>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -493,7 +564,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 198,
+   "id": "4035355e-560c-4e33-8ddd-357880bb1cb2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "patterns = [{\"label\":\"comp\", \"pattern\":[{\"LOWER\":\"pressure gauge\"}, {\"POS\":\"NOUN\"}], \"id\":\"ssc\"}]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 176,
    "id": "172d9df3-82c4-4de2-9aa7-317e2211ef66",
    "metadata": {},
    "outputs": [
@@ -610,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 177,
    "id": "e793d7ae-09c5-424c-adbc-fe9e2afb5df6",
    "metadata": {},
    "outputs": [],
@@ -620,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 178,
    "id": "b38987f8-ba22-4b6b-b8a6-97629c1e71bf",
    "metadata": {},
    "outputs": [
@@ -824,7 +905,7 @@
        "[91 rows x 9 columns]"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 178,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -835,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 179,
    "id": "13a0825d-1bb1-4ec0-817c-eb0536bc7968",
    "metadata": {},
    "outputs": [
@@ -845,7 +926,7 @@
        "'0: RCP(6), RCP(11), RCP(29); 1: gauge(15), it(22); 2: Rupture(39), Rupture(48)'"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 179,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -856,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 180,
    "id": "4f46847c-7d90-4823-b33d-ec5bc0b7107f",
    "metadata": {},
    "outputs": [
@@ -867,8 +948,10 @@
       "RCP\n",
       "RCP\n",
       "1A\n",
+      "gauge\n",
       "RCP\n",
-      "1A\n"
+      "1A\n",
+      "gauge\n"
      ]
     }
    ],
@@ -879,17 +962,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 183,
    "id": "2da65fee-85a7-4324-9beb-f6943f6ae8f4",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "''"
+       "'gauge'"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 183,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -900,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 182,
    "id": "807d97dd-3627-4c2f-ae2d-89961da7860e",
    "metadata": {},
    "outputs": [
@@ -908,22 +991,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "token Rupture\n",
+      "Rupture\n",
       "\n",
+      "Rupture\n",
       "\n",
+      "token Rupture\n",
+      "Rupture\n",
       "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
-      "\n",
+      "Rupture\n",
       "\n"
      ]
     }
@@ -934,12 +1010,14 @@
     "    \n",
     "    # if token is coref and not already dereferenced\n",
     "    if coref and token._.ref_n == '':\n",
+    "      print('token', token)\n",
     "      # print(token,coref.pretty_representation)\n",
     "      # check all the references, if \"ref_n\" is available (determined by NER and initCoref),\n",
     "      # the value of \"ref_n\" will be assigned to current totken\n",
     "      for chain in coref:\n",
     "        for ref in chain:\n",
     "          refToken = doc[ref[0]]\n",
+    "          print(refToken)\n",
     "          print(refToken._.ref_n)\n",
     "          if refToken._.ref_n != '':\n",
     "            token._.ref_n = refToken._.ref_n\n",
@@ -949,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 157,
    "id": "560fd3d9-d77b-4b27-b384-e36e4a96c691",
    "metadata": {},
    "outputs": [],
@@ -963,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 158,
    "id": "29ba4cf5-bd97-49a8-8079-ac1c17c85f6e",
    "metadata": {},
    "outputs": [
@@ -973,7 +1051,7 @@
        "(None, [[{'LOWER': 'hello'}, {'IS_PUNCT': True}, {'LOWER': 'world'}]])"
       ]
      },
-     "execution_count": 91,
+     "execution_count": 158,
      "metadata": {},
      "output_type": "execute_result"
     }
