add sentence collection

--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -1062,8 +1062,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "6cf4b333-dd53-4873-917c-8609749b54a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(RCP, RCP, 1A, gauge, RCP, 1A, gauge)"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "doc.ents"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 209,
+   "id": "fd922cc7-1bd6-46ab-92ab-2b8de041a725",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., The RCP pump 1A pressure gauge was found inoperative., The RCP pump 1A pressure gauge was found inoperative., The RCP pump 1A pressure gauge was found inoperative.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sentList = []\n",
+    "for ent in doc.ents:\n",
+    "    sent = ent.sent\n",
+    "    sentList.append(sent)\n",
+    "print(sentList)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0a9e8f58-df86-4fc9-8f6b-725c05eb45aa",
    "metadata": {},
    "outputs": [],
    "source": []
