--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "id": "46237dbc-ac22-482f-9373-1c1eaee56f40",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "id": "86be0452-6e98-46b4-9e4f-4447fc9996ef",
    "metadata": {},
    "outputs": [],
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "id": "72461323-634d-47c7-9070-c9b560e9f8cd",
    "metadata": {},
    "outputs": [],
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "id": "c84f0247-badc-400d-8d9e-a70c30a44d0b",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "id": "e87f1527-df2f-4650-8f2a-d41a1e2b554f",
    "metadata": {},
    "outputs": [],
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "id": "d77fe2da-0b90-4c65-ae0a-7709b891e408",
    "metadata": {},
    "outputs": [],
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "id": "7b875bff-5467-4770-8ab8-859339367865",
    "metadata": {},
    "outputs": [],
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "id": "b1510c06-e424-4563-972e-ff88dfd9fbc0",
    "metadata": {},
    "outputs": [],
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "id": "eefa2983-fc49-4027-abde-f2281f27508a",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "id": "c7427840-70b6-4688-9d59-9857f29d5d45",
    "metadata": {},
    "outputs": [],
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "id": "307b1d23-da5c-47e1-96e7-ca807af1c2a0",
    "metadata": {},
    "outputs": [],
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 14,
    "id": "38da0b2b-c0b8-41df-a62f-4b35a7128331",
    "metadata": {},
    "outputs": [],
@@ -274,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 15,
    "id": "23a97765-5029-4dc9-a418-3b959ebccadf",
    "metadata": {},
    "outputs": [],
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 16,
    "id": "42718587-1eba-4162-a4b0-333f01ce79b5",
    "metadata": {},
    "outputs": [],
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 17,
    "id": "4683848d-8b5c-453c-b5f4-15cd5147c082",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 18,
    "id": "dd59f6b0-bfa8-44f9-b73b-0bc7369616b3",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 19,
    "id": "cc0561d7-775d-4c19-ae5c-68fc2d39fd09",
    "metadata": {},
    "outputs": [
@@ -342,7 +342,7 @@
        " 'expandEntities']"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 20,
    "id": "645de700-3e0b-40e0-aa15-dcea71a016f2",
    "metadata": {},
    "outputs": [],
@@ -363,30 +363,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 21,
    "id": "a0f0d71b-0b76-416d-b73a-926933ded429",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x13b5a2630>),\n",
-       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x147debf90>),\n",
-       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x147dcc880>),\n",
+       "[('tok2vec', <spacy.pipeline.tok2vec.Tok2Vec at 0x13e63a6d0>),\n",
+       " ('tagger', <spacy.pipeline.tagger.Tagger at 0x10ea68180>),\n",
+       " ('parser', <spacy.pipeline.dep_parser.DependencyParser at 0x13e350ee0>),\n",
        " ('attribute_ruler',\n",
-       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x147deab00>),\n",
-       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x147de8d40>),\n",
-       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x147c37fa0>),\n",
-       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x147c3cc80>),\n",
+       "  <spacy.pipeline.attributeruler.AttributeRuler at 0x13e616380>),\n",
+       " ('lemmatizer', <spacy.lang.en.lemmatizer.EnglishLemmatizer at 0x13e376040>),\n",
+       " ('ner', <spacy.pipeline.ner.EntityRecognizer at 0x13e350ca0>),\n",
+       " ('entity_ruler', <spacy.pipeline.entityruler.EntityRuler at 0x13e36e080>),\n",
        " ('normEntities', <function __main__.normEntities(doc)>),\n",
        " ('initCoref', <function __main__.initCoref(doc)>),\n",
        " ('aliasResolver', <function __main__.aliasResolver(doc)>),\n",
-       " ('coreferee', <coreferee.manager.CorefereeBroker at 0x13e839850>),\n",
+       " ('coreferee', <coreferee.manager.CorefereeBroker at 0x14545d7c0>),\n",
        " ('anaphorCoref', <function __main__.anaphorCoref(doc)>),\n",
        " ('expandEntities', <function __main__.expandEntities(doc)>)]"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -397,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 22,
    "id": "dbc474ab-204f-4c6b-8f10-e76dbdd5457c",
    "metadata": {},
    "outputs": [],
@@ -416,7 +416,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 189,
+   "execution_count": 23,
    "id": "8c459300-fc7a-42cf-82d6-b2b04e292d61",
    "metadata": {},
    "outputs": [],
@@ -432,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 24,
    "id": "c65480e5-e18a-41a3-92a6-b4ff7f645fb5",
    "metadata": {},
    "outputs": [],
@@ -442,7 +442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 25,
    "id": "1ce1bea8-e78a-4f92-91f9-ea401d4f97a4",
    "metadata": {},
    "outputs": [
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 26,
    "id": "7fb5cf82-4c40-435b-8809-9705ae2e12aa",
    "metadata": {},
    "outputs": [
@@ -496,7 +496,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 27,
    "id": "0e712288-8fb5-4c83-960d-b895fb7c4dba",
    "metadata": {},
    "outputs": [],
@@ -506,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 28,
    "id": "22feb96d-37a4-4d54-af4b-db7899d75dfc",
    "metadata": {},
    "outputs": [
@@ -564,7 +564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 29,
    "id": "4035355e-560c-4e33-8ddd-357880bb1cb2",
    "metadata": {},
    "outputs": [],
@@ -574,7 +574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 30,
    "id": "172d9df3-82c4-4de2-9aa7-317e2211ef66",
    "metadata": {},
    "outputs": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 31,
    "id": "e793d7ae-09c5-424c-adbc-fe9e2afb5df6",
    "metadata": {},
    "outputs": [],
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 32,
    "id": "b38987f8-ba22-4b6b-b8a6-97629c1e71bf",
    "metadata": {},
    "outputs": [
@@ -905,7 +905,7 @@
        "[91 rows x 9 columns]"
       ]
      },
-     "execution_count": 178,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -916,7 +916,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 33,
    "id": "13a0825d-1bb1-4ec0-817c-eb0536bc7968",
    "metadata": {},
    "outputs": [
@@ -926,7 +926,7 @@
        "'0: RCP(6), RCP(11), RCP(29); 1: gauge(15), it(22); 2: Rupture(39), Rupture(48)'"
       ]
      },
-     "execution_count": 179,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,7 +937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 34,
    "id": "4f46847c-7d90-4823-b33d-ec5bc0b7107f",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 35,
    "id": "2da65fee-85a7-4324-9beb-f6943f6ae8f4",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
        "'gauge'"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 36,
    "id": "807d97dd-3627-4c2f-ae2d-89961da7860e",
    "metadata": {},
    "outputs": [
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 37,
    "id": "560fd3d9-d77b-4b27-b384-e36e4a96c691",
    "metadata": {},
    "outputs": [],
@@ -1041,7 +1041,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 38,
    "id": "29ba4cf5-bd97-49a8-8079-ac1c17c85f6e",
    "metadata": {},
    "outputs": [
@@ -1051,7 +1051,7 @@
        "(None, [[{'LOWER': 'hello'}, {'IS_PUNCT': True}, {'LOWER': 'world'}]])"
       ]
      },
-     "execution_count": 158,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1062,7 +1062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 39,
    "id": "6cf4b333-dd53-4873-917c-8609749b54a1",
    "metadata": {},
    "outputs": [
@@ -1072,7 +1072,7 @@
        "(RCP, RCP, 1A, gauge, RCP, 1A, gauge)"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 48,
    "id": "fd922cc7-1bd6-46ab-92ab-2b8de041a725",
    "metadata": {},
    "outputs": [
@@ -1092,25 +1092,44 @@
      "output_type": "stream",
      "text": [
       "[A leak was noticed from the RCP pump 1A.\n",
-      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
-      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
-      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., A leak was noticed from the RCP pump 1A.\n",
-      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., The RCP pump 1A pressure gauge was found inoperative., The RCP pump 1A pressure gauge was found inoperative., The RCP pump 1A pressure gauge was found inoperative.]\n"
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative., The RCP pump 1A pressure gauge was found inoperative.]\n"
      ]
     }
    ],
    "source": [
-    "sentList = []\n",
+    "sl = []\n",
     "for ent in doc.ents:\n",
     "    sent = ent.sent\n",
-    "    sentList.append(sent)\n",
-    "print(sentList)"
+    "    if sent not in sl:\n",
+    "        sl.append(sent)\n",
+    "print(sl)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "0a9e8f58-df86-4fc9-8f6b-725c05eb45aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The RCP pump 1A pressure gauge was found inoperative.\n",
+      "A leak was noticed from the RCP pump 1A.\n",
+      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative.\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sent in sl:\n",
+    "    print(sent)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a9e8f58-df86-4fc9-8f6b-725c05eb45aa",
+   "id": "bd05916c-e67e-417d-8407-b7367099ea5e",
    "metadata": {},
    "outputs": [],
    "source": []
