--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 50,
    "id": "0a9e8f58-df86-4fc9-8f6b-725c05eb45aa",
    "metadata": {},
    "outputs": [
@@ -1115,21 +1115,80 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The RCP pump 1A pressure gauge was found inoperative.\n",
-      "A leak was noticed from the RCP pump 1A.\n",
-      "          The RCP pump 1A pressure gauge was found not operating, and it was found inoperative.\n"
+      "[RCP, RCP, 1A, gauge]\n",
+      "{1A, gauge, RCP, RCP}\n",
+      "[RCP, 1A, gauge]\n",
+      "{RCP, 1A, gauge}\n"
      ]
     }
    ],
    "source": [
     "for sent in sl:\n",
-    "    print(sent)"
+    "    print(sent.ents)\n",
+    "    print(set(sent.ents))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "bd05916c-e67e-417d-8407-b7367099ea5e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "14\n",
+      "15\n",
+      "16\n",
+      "17\n",
+      "18\n",
+      "19\n",
+      "20\n",
+      "21\n",
+      "22\n",
+      "23\n",
+      "24\n",
+      "25\n",
+      "26\n",
+      "28\n",
+      "29\n",
+      "30\n",
+      "31\n",
+      "32\n",
+      "33\n",
+      "34\n",
+      "35\n",
+      "36\n",
+      "37\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sent in sl:\n",
+    "    for token in sent:\n",
+    "        print(token.i)\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bd05916c-e67e-417d-8407-b7367099ea5e",
+   "id": "a67cc7fc-6efa-48dd-8cae-d2c4b4eb6549",
    "metadata": {},
    "outputs": [],
    "source": []
