--- a/src/nlp/nlp_custom_pipes.ipynb
+++ b/src/nlp/nlp_custom_pipes.ipynb
@@ -1130,7 +1130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "bd05916c-e67e-417d-8407-b7367099ea5e",
    "metadata": {},
    "outputs": [
@@ -1138,50 +1138,53 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n",
-      "1\n",
-      "2\n",
-      "3\n",
-      "4\n",
-      "5\n",
-      "6\n",
-      "7\n",
-      "8\n",
-      "9\n",
-      "10\n",
-      "11\n",
-      "12\n",
-      "13\n",
-      "14\n",
-      "15\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "20\n",
-      "21\n",
-      "22\n",
-      "23\n",
-      "24\n",
-      "25\n",
-      "26\n",
-      "28\n",
-      "29\n",
-      "30\n",
-      "31\n",
-      "32\n",
-      "33\n",
-      "34\n",
-      "35\n",
-      "36\n",
-      "37\n"
+      "noticed\n",
+      "det\n",
+      "nsubjpass\n",
+      "auxpass\n",
+      "ROOT\n",
+      "prep\n",
+      "det\n",
+      "pobj\n",
+      "advcl\n",
+      "compound\n",
+      "dobj\n",
+      "det\n",
+      "nsubj\n",
+      "compound\n",
+      "compound\n",
+      "compound\n",
+      "nsubjpass\n",
+      "auxpass\n",
+      "conj\n",
+      "neg\n",
+      "xcomp\n",
+      "punct\n",
+      "cc\n",
+      "nsubjpass\n",
+      "auxpass\n",
+      "conj\n",
+      "oprd\n",
+      "punct\n",
+      "found\n",
+      "det\n",
+      "nsubj\n",
+      "compound\n",
+      "compound\n",
+      "compound\n",
+      "nsubjpass\n",
+      "auxpass\n",
+      "ROOT\n",
+      "oprd\n",
+      "punct\n"
      ]
     }
    ],
    "source": [
     "for sent in sl:\n",
+    "    print(sent.root)\n",
     "    for token in sent:\n",
-    "        print(token.i)\n",
+    "        print(token.dep_)\n",
     "        "
    ]
   },
