--- a/src/nlp/jupyter/numerizerPreprocessing.ipynb
+++ b/src/nlp/jupyter/numerizerPreprocessing.ipynb
@@ -59,6 +59,93 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e0200dae",
+   "metadata": {},
+   "source": [
+    "## numerizer Optional Arguments\n",
+    "numerizer can take in the optional arguments `ignore` and `bias`\n",
+    "\n",
+    "`ignore` - provide list of words to ignore\n",
+    "\n",
+    "`bias` - str, can be 'ordinal', 'fractional', 'fractionals'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "b28f46a6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "text = (\n",
+    "        \"squash a bug\\n\"\n",
+    "        \"crash a car\\n\"\n",
+    "        \"An\\n\"\n",
+    "        \"an\\n\"\n",
+    "        \"A\\n\"\n",
+    "        \"first\\n\"\n",
+    "        \"two\\n\"\n",
+    "        \"second\\n\"\n",
+    "        \"forty-second\\n\"\n",
+    "        \"two thirds\\n\"\n",
+    "        \"one fourth\\n\"\n",
+    "        \"one quarter\\n\"\n",
+    "        \"one half\\n\"\n",
+    "        \"nine and three quarters\\n\"\n",
+    "        \"I saw A BIRD\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "028a720b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Original                | No args          | ignore=['second'] | bias='ordinal'   | bias='fractional' | bias='fractionals' |\n",
+      "============================================================================================================================\n",
+      "squash a bug            | squash 1 bug     | squash 1 bug      | squash 1 bug     | squash 1 bug      | squash 1 bug       |\n",
+      "crash a car             | crash a car      | crash a car       | crash a car      | crash a car       | crash a car        |\n",
+      "An                      | An               | An                | An               | An                | An                 |\n",
+      "an                      | an               | an                | an               | an                | an                 |\n",
+      "A                       | A                | A                 | A                | A                 | A                  |\n",
+      "first                   | 1st              | 1st               | 1st              | 1st               | first              |\n",
+      "two                     | 2                | 2                 | 2                | 2                 | 2                  |\n",
+      "second                  | 2nd              | second            | second           | 2nd               | second             |\n",
+      "forty-second            | 42nd             | 40 second         | 42nd             | 42nd              | 42nd               |\n",
+      "two thirds              | 2/3              | 2/3               | 2/3              | 2/3               | 2/3                |\n",
+      "one fourth              | 1 fourth         | 1 fourth          | 1 fourth         | 1 fourth          | 1 fourth           |\n",
+      "one quarter             | 1/4              | 1/4               | 1/4              | 1 quarter         | 1/4                |\n",
+      "one half                | 1 1/2            | 1 1/2             | 1 1/2            | 1 1/2             | 1 1/2              |\n",
+      "nine and three quarters | 9 and 3 quarters | 9 and 3 quarters  | 9 and 3 quarters | 9 and 3 quarters  | 9 and 3 quarters   |\n",
+      "I saw A BIRD            | I saw A BIRD     | I saw A BIRD      | I saw A BIRD     | I saw A BIRD      | I saw A BIRD       |\n"
+     ]
+    }
+   ],
+   "source": [
+    "text_list = text.split('\\n')\n",
+    "no = numerize(text)\n",
+    "no_list = no.split('\\n')\n",
+    "ignore = numerize(text, ignore=['second'])\n",
+    "ignore_list = ignore.split('\\n')\n",
+    "ordinal = numerize(text, bias='ordinal')\n",
+    "ordinal_list = ordinal.split('\\n')\n",
+    "fractional = numerize(text, bias='fractional')\n",
+    "fractional_list = fractional.split('\\n')\n",
+    "fractionals = numerize(text, bias='fractionals')\n",
+    "fractionals_list = fractionals.split('\\n')\n",
+    "print(\"Original                | No args          | ignore=['second'] | bias='ordinal'   | bias='fractional' | bias='fractionals' |\")\n",
+    "print(\"============================================================================================================================\")\n",
+    "for orig, non, ig, ordi, frac, fracs in zip(text_list, no_list, ignore_list, ordinal_list, fractional_list, fractionals_list):\n",
+    "    print(f\"{orig:23} | {non:16} | {ig:17} | {ordi:16} | {frac:17} | {fracs:18} |\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4822daa6",
    "metadata": {},
    "source": [
@@ -67,19 +154,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "1ebc95bb",
    "metadata": {},
    "outputs": [],
    "source": [
     "import spacy\n",
     "nlp = spacy.load('en_core_web_sm')\n",
-    "doc = nlp('The projected revenue for the next quarter is over two million dollars.')\n"
+    "doc = nlp('The projected revenue for the next quarter is over two million dollars.')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "7fa748f8",
    "metadata": {},
    "outputs": [
@@ -90,7 +177,7 @@
        " over two million dollars: 'over 2000000 dollars'}"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "37bfdbd9",
    "metadata": {},
    "outputs": [
@@ -111,7 +198,7 @@
        "{over two million dollars: 'over 2000000 dollars'}"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "bf6b8220",
    "metadata": {},
    "outputs": [
@@ -132,7 +219,7 @@
        "'2000000'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -144,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "id": "3f0b6a39",
    "metadata": {},
    "outputs": [
@@ -154,7 +241,7 @@
        "'1/4'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
