updating preprocessing jupyter notebooks

--- a/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
+++ b/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
@@ -260,7 +260,7 @@
       "=====================================================================================================================\n",
       "Well… That's a long story. | Well… That's a long story. | Well… That's a long story. | Well... That's a long story. |\n",
       "=====================================================================================================================\n",
-      "form=NFKD                   \n",
+      "form=\"NFKD\"                 \n",
       "==============================\n",
       "Well... That's a long story. |\n"
      ]
@@ -278,7 +278,7 @@
     "    print(f\"{orig:26} | {t1:26} | {t2:26} | {t3:28} |\")\n",
     "\n",
     "print(\"=\"*117)\n",
-    "print(\"{:28}\".format('form=NFKD'))\n",
+    "print(\"{:28}\".format('form=\"NFKD\"'))\n",
     "print(\"=\"*30)\n",
     "for t4 in unicode4_text.split('\\n'):\n",
     "    print(f\"{t4:28} |\")"
