--- a/src/nlp/jupyter/numerizerPreprocessing.ipynb
+++ b/src/nlp/jupyter/numerizerPreprocessing.ipynb
@@ -146,6 +146,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7eb870b",
+   "metadata": {},
+   "source": [
+    "Note that the first time numerizer sees 'A' or 'a' it gets changed to '1'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "4822daa6",
    "metadata": {},
    "source": [
