--- a/src/nlp/jupyter/PreprocessingDemo.ipynb
+++ b/src/nlp/jupyter/PreprocessingDemo.ipynb
@@ -803,9 +803,9 @@
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -817,7 +817,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
