--- a/src/nlp/jupyter/numerizerPreprocessing.ipynb
+++ b/src/nlp/jupyter/numerizerPreprocessing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "d84aa254",
    "metadata": {},
    "outputs": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "b28f46a6",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "028a720b",
    "metadata": {},
    "outputs": [
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "1ebc95bb",
    "metadata": {},
    "outputs": [],
@@ -174,18 +174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "7fa748f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{the next quarter: 'the next1/4',\n",
-       " over two million dollars: 'over 2000000 dollars'}"
+       "{the next quarter: 'the next1/4', two million dollars: '2000000 dollars'}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,17 +195,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "37bfdbd9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{over two million dollars: 'over 2000000 dollars'}"
+       "{two million dollars: '2000000 dollars'}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "bf6b8220",
    "metadata": {},
    "outputs": [
@@ -227,7 +226,7 @@
        "'2000000'"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -239,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3f0b6a39",
    "metadata": {},
    "outputs": [
@@ -249,7 +248,7 @@
        "'1/4'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -258,14 +257,38 @@
     "quarter = doc[6]\n",
     "quarter._.numerized"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "2701b40f-252c-4028-8c66-b7e268d6f83d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Currently have issue with ImportError: cannot import name 'UNICODE_EMOJI' from 'emoji'\n",
+    "\n",
+    "# from recognizers_text import Culture, ModelResult\n",
+    "# from recognizers_number import NumberRecognizer\n",
+    "# from recognizers_number_with_unit import NumberWithUnitRecognizer \n",
+    "# from recognizers_date_time import DateTimeRecognizer \n",
+    "# from recognizers_sequence import SequenceRecognizer "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "dfb34987-fd54-4abe-a595-ec93e950b766",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -277,7 +300,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
