--- a/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
+++ b/src/nlp/jupyter/textacyPreprocessingMethods.ipynb
@@ -312,7 +312,7 @@
       "Hello,\n",
       "\n",
       "world!\n",
-      "Hello,\r\n",
+      "Hello,\n",
       "world!\n",
       "Hello﻿, world!\n",
       "Hello​​, world!\n",
@@ -1218,14 +1218,30 @@
     "clean_text = pipeline(all_text)\n",
     "print(clean_text)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8c08eec9-cf3e-4e3c-8be6-31dbad5107a5",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1b32f3dd-3177-4686-a27d-b08b83107325",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "hide_input": false,
   "kernelspec": {
-   "display_name": "nlp",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "nlp"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1237,7 +1253,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.10"
   }
  },
  "nbformat": 4,
